# RWrapperMiscellaneousPkg

./: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  _pkgdown.yml
R/: extendr-wrappers.R  send_custom_http_request.R
docs/: 404.html  LICENSE-text.html  LICENSE.html  authors.html  index.html  pkgdown.yml  sitemap.xml
docs/reference/: .~lock.example.xlsx#  abs_matrix.html  add_matrix.html  add_num.html  bndm_matching.html  bom_matching.html  cs_shake_v128.html  cs_shake_v256.html  div_num.html  dot_product_matrix.html  example.xlsx  get_abbreviation.html  get_adjective.html  get_alcohol.html  get_anmimal.html  get_blg.html  get_bool.html  get_bs.html  get_buzzword.html  get_car_maker.html  get_car_model.html  (+148 more)
man/: abs_matrix.Rd  add_matrix.Rd  add_num.Rd  bndm_matching.Rd  bom_matching.Rd  cs_shake_v128.Rd  cs_shake_v256.Rd  div_num.Rd  dot_product_matrix.Rd  get_abbreviation.Rd  get_adjective.Rd  get_alcohol.Rd  get_anmimal.Rd  get_blg.Rd  get_bool.Rd  get_bs.Rd  get_buzzword.Rd  get_car_maker.Rd  get_car_model.Rd  get_cat.Rd  get_city.Rd  get_company.Rd  get_company_suffix.Rd  get_country.Rd  get_country_abr.Rd  get_credit_card_ccv.Rd  get_credit_card_exp.Rd  get_credit_card_luhn_number.Rd  get_credit_card_number.Rd  get_credit_card_type.Rd  get_currency_long.Rd  get_currency_short.Rd  get_day.Rd  get_dog.Rd  get_domain_name.Rd  get_domain_suffix.Rd  get_email.Rd  get_extension.Rd  get_farm.Rd  get_first_name.Rd  (+124 more)
src/: Makevars  Makevars.win  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: helpers.rs  lib.rs
tests/: testthat.R
(+22 files in other folders)
