[package]
name = 'RWrapperMiscellaneousPkg'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'RWrapperMiscellaneousPkg'

[dependencies]
extendr-api = '*'
rust_miscellaneous_pkg = { git = "https://github.com/Tmando/rust_miscellaneous_pkg/", tag = "v0.6.1" }
bytes = "1"
nalgebra = "0.31.1"
tokio = "1.21.2"
serde_json = "1.0.85"
image = "0.24.4"
openssl = "0.10.42"
postgres = {version = "^0.19.4"}