[package]
name = 'RWrapperMiscellaneousPkg'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'RWrapperMiscellaneousPkg'

[dependencies]
extendr-api = '0.4.0'
rust_miscellaneous_pkg = { git = "https://github.com/Tmando/rust_miscellaneous_pkg/", tag = "v0.7.0"}
bytes = "1.4.0"
nalgebra = "0.32.3"
tokio = "1.21.2"
serde_json = "1.0.85"
image = "0.24.4"
openssl = "0.10.42"
extract_json = { git = "https://github.com/Tmando/extract_json/", tag = "v0.2.0"}
